force-app/main/default/objects/Order/fields/Choose_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Choose_Rewards__c</fullName>
    <label>Choose Rewards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free small fries (2500)</fullName>
            </value>
            <value>
                <fullName>Free double cheeseburger (5000)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>