force-app/main/default/objects/Order/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Account</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>