force-app/main/default/objects/Order/fields/Redeeming_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Redeeming_Reward_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redeeming Reward Points?</label>
    <type>Checkbox</type>
</CustomField>