force-app/main/default/objects/Order/validationRules/Check_reward_points.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_reward_points</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordTypeId = &quot;0125e0000007mw2&quot;,
  OR(
    AND(
      AND(
        INCLUDES( Choose_Rewards__c, &quot;Free small fries (2500)&quot;),
        INCLUDES( Choose_Rewards__c, &quot;Free double cheeseburger (5000)&quot;)
      ),
      Account.RewardPoints__c  &lt; 7500
    ),
    AND(
      INCLUDES( Choose_Rewards__c, &quot;Free small fries (2500)&quot;),
      Account.RewardPoints__c  &lt; 2500
    ),
    AND(
      INCLUDES( Choose_Rewards__c, &quot;Free double cheeseburger (5000)&quot;),
      Account.RewardPoints__c  &lt; 5000
    )
  )
)</errorConditionFormula>
    <errorMessage>Insufficient reward points</errorMessage>
</ValidationRule>