force-app/main/default/objects/Order/listViews/Order.listView-meta.xml
<ListView>
    <fullName>Order</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Customer_Order</value>
    </filters>
    <label>Customer Orders</label>
    <sharedTo>
        <group>List_Views</group>
    </sharedTo>
</ListView>