force-app/main/default/objects/Order/listViews/SupplyOrders.listView-meta.xml
<ListView>
    <fullName>SupplyOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Supply_Order</value>
    </filters>
    <label>Supply Orders</label>
    <sharedTo>
        <group>List_Views</group>
    </sharedTo>
</ListView>